# u-insight

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
.github/workflows/: ci.yml  npm-publish.yml  nuget-release.yml  release.yml
bindings/csharp/: README.md
bindings/csharp/UInsight/: InsightClient.cs  InsightDataType.cs  InsightException.cs  UInsight.csproj  UInsightInfo.cs
bindings/csharp/UInsight/Interop/: NativeLibrary.cs  NativeStructs.cs
include/: u_insight.h
src/: analysis.rs  clustering.rs  csv_parser.rs  dataframe.rs  distribution.rs  error.rs  feature_importance.rs  ffi.rs  isolation_forest.rs  json_parser.rs  lib.rs  lof.rs  mahalanobis.rs  pca.rs  profiling.rs  wasm.rs
