[package]
name = "u-insight"
version = "0.5.0"
edition = "2021"
authors = ["iyulab"]
license = "MIT"
repository = "https://github.com/iyulab/u-insight"
description = "Statistical analysis and data profiling engine with C FFI bindings."
readme = "README.md"
keywords = ["statistics", "profiling", "analytics", "ffi"]
categories = ["algorithms", "science"]

[features]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:serde"]

[dependencies]
u-analytics = { version = "0.2", path = "../../algorithms/u-analytics" }
u-numflow = { version = "0.2", path = "../../foundation/u-numflow" }
rand = "0.9"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
proptest = "1.4"

[lib]
name = "u_insight"
crate-type = ["rlib", "cdylib", "staticlib"]
